--- a/app/templates/shop.hbs
+++ b/app/templates/shop.hbs
@@ -1,5 +1,5 @@
 <div class="shop-wrapper">
-    <div class="shops list-table">
+    <div class="shop list-table">
         <div class="list-table-body">
             {{#each this.model as |shop|}}
                 {{shop-listing shop=shop}}
