--- a/app/templates/shop/index.hbs
+++ b/app/templates/shop/index.hbs
@@ -9,4 +9,11 @@
             {{/each}}
         </div>
     </div>
+    <div class="add-new-item-box">
+        {{shop/add-shop}}
+        {{!-- {{log edtiMood}}
+        {{#if editMood}}
+            {{input value=name}}
+        {{/if}} --}}
+    </div>
 </div>
