--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -75,6 +75,12 @@ body{
 
 .button.primary:hover { background: #337ab7; }
 
+.button.disabled { background: #5f5f5f}
+.button.disabled:hover {
+    background: #7d7979;
+    cursor: not-allowed;
+}
+
 .add-new-item-box{
     padding : 20px 0;
 }
