--- a/app/templates/components/shop/add-product.hbs
+++ b/app/templates/components/shop/add-product.hbs
@@ -6,9 +6,15 @@
     >Add Product
     </button>
     {{/unless}}
+    {{#if success}}
+        <span>{{successMessage}}</span>
+    {{/if}}
+    {{#if error}}
+        <span>{{errorMessage}}</span>
+    {{/if}}
 
     {{#if editMood}}
-        <button class="button success" {{action "addNewShop"}}>Create</button>
+        <button class="button {{if this.disabled 'disabled' 'success'}}" {{action "addNewShop"}} disabled={{disabled}}>Create</button>
         <button class="button warning"{{action "changeEditMood"}}>Cancel</button>
         {{input value=name class="input" placeholder="Name"}}
         {{input value=qty class="input" placeholder="QTY"}}
