--- a/app/templates/shop/products.hbs
+++ b/app/templates/shop/products.hbs
@@ -1,5 +1,5 @@
 <div class="shop-wrapper">
-    <h1 align="center">Shops / {{model.name}}</h1>
+    <h1 align="center">{{#link-to "shop"}}Shops{{/link-to}} / {{model.name}}</h1>
     <div class="list-table">
         <div class="list-table-header">
             <div class="list-table-row shop">
