--- a/app/templates/shop/index.hbs
+++ b/app/templates/shop/index.hbs
@@ -3,7 +3,7 @@
     <div class="shop list-table">
         <div class="list-table-body">
             {{#each this.model as |shop|}}
-                {{shop-item shop=shop}}
+                {{shop/shop-item shop=shop}}
                 {{else}}
                 <p align="center">There is no shop, You can add it!</p>
             {{/each}}
