--- a/app/templates/components/shop/add-shop.hbs
+++ b/app/templates/components/shop/add-shop.hbs
@@ -6,11 +6,8 @@
     >Add Shop
     </button>
     {{/unless}}
-    {{#if success}}
-        <span>{{successMessage}}</span>
-    {{/if}}
-    {{#if error}}
-        <span>{{errorMessage}}</span>
+    {{#if showNotification}}
+        <span>{{notification}}</span>
     {{/if}}
     {{#if editMood}}
         <button class="button success" {{action "addNewShop"}} disabled={{disabled}}>Create</button>
