--- a/app/templates/components/shop/shop-item.hbs
+++ b/app/templates/components/shop/shop-item.hbs
@@ -9,11 +9,8 @@
         {{/if}}
     </div>
     <div class="list-table-col">
-        {{#if success}}
-            <span>{{successMessage}}</span>
-        {{/if}}
-        {{#if error}}
-            <span>{{errorMessage}}</span>
+        {{#if showNotification}}
+            <span>{{notification}}</span>
         {{/if}}
         {{#if editMood}}
             <button class="button success" {{action "editShop" shop.id}} disabled={{disabled}}>Save</button>
