--- a/app/templates/components/shop/product-item.hbs
+++ b/app/templates/components/shop/product-item.hbs
@@ -2,7 +2,7 @@
     {{#unless editMood}}
         <div class="list-table-col">{{product.name}}</div>
         <div class="list-table-col">{{product.qty}}</div>
-        <div class="list-table-col">{{product.price}}</div>            
+        <div class="list-table-col">{{product.price}}$</div>            
         <div class="list-table-col">
             <button class="button primary" {{action "changeEditMood"}}>Edit</button>
             <button class="button danger">Delete</button>
