--- a/app/templates/shop/products.hbs
+++ b/app/templates/shop/products.hbs
@@ -10,12 +10,12 @@
             </div>
         </div>
         <div class="list-table-body">
-            {{#each this.model as |product|}}
+            {{#each this.model.products as |product|}}
                 {{shop/product-item product=product shopId=model.id}}
                 {{else}}
                 <p align="center">There is no product, You can add it!</p>
             {{/each}}
         </div>
     </div>
-    {{shop/add-product shopId=model.id}}
+    {{shop/add-product model=model}}
 </div>
